[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/MainMenu/Menu_Main.gd" type="Script" id=1]
[ext_resource path="res://Fonts/KiriFont_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/KiriFont_56.tres" type="DynamicFont" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_id = "main_menu"

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.317647, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Backdrop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 125.716
margin_bottom = -407.284
custom_fonts/font = ExtResource( 3 )
text = "The bunny scientist game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -32.7849
margin_right = 92.0
margin_bottom = 220.215
custom_constants/separation = 23
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="ItemList"]
margin_right = 184.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "New Game"
flat = true

[node name="Load" type="Button" parent="ItemList"]
margin_top = 46.0
margin_right = 184.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Load"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="ItemList"]
margin_top = 92.0
margin_right = 184.0
margin_bottom = 115.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Button" parent="ItemList"]
margin_top = 138.0
margin_right = 184.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 2 )
text = "About"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="ItemList"]
margin_top = 184.0
margin_right = 184.0
margin_bottom = 207.0
custom_fonts/font = ExtResource( 2 )
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="ItemList"]
margin_top = 230.0
margin_right = 184.0
margin_bottom = 253.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ItemList/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="ItemList/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="ItemList/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="ItemList/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="ItemList/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="ItemList/Quit" to="." method="_on_Quit_pressed"]
